--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,12 @@ timezone: Asia/Karachi
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: Shairyar Baig                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: tinkering with stuff  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  Hi there! My name is Shairyar Baig, I am a developer and I love tinkering with diferent programing languages & hardware.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://shairyar.github.io'
@@ -40,12 +40,12 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com             # change to your email address
+  name: Shairyar Baig
+  email: shairyarbaig@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://twitter.com/iamshairyar      # change to your twitter homepage
+    - https://github.com/shairyar       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -56,7 +56,7 @@ google_site_verification:               # fill in to your verification string
 # The end of `jekyll-seo-tag` settings
 
 google_analytics:
-  id:                 # fill in your Google Analytics ID
+  id: 'G-3MSE8F2TRT'                 # fill in your Google Analytics ID
   # Google Analytics pageviews report settings
   pv:
     proxy_endpoint:   # fill in the Google Analytics superProxy endpoint of Google App Engine
@@ -83,7 +83,7 @@ theme_mode:   # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: 'https://pbs.twimg.com/profile_images/1531277756490825728/myc7uFj__400x400.jpg'
 
 # boolean type, the global switch for ToC in posts.
 toc: true
